# EditGameEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.claude/rules/: references.md  requirements.md
cmake/: dependencies.cmake
src/blueprint/: CMakeLists.txt  blueprint.cpp  blueprint.hpp  codec.cpp  codec.hpp  graph.hpp
src/game/: CMakeLists.txt  app.cpp  app.hpp  i18n.cpp  i18n.hpp  main.cpp  recipes.cpp  recipes.hpp  theme.cpp  theme.hpp
src/lang/: CMakeLists.txt  ast.hpp  feature.cpp  feature.hpp  interpreter.cpp  interpreter.hpp  lang.cpp  lang.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  token.hpp  value.hpp
src/sim/: CMakeLists.txt  fleet.cpp  fleet.hpp  progress.cpp  progress.hpp  robot_host.cpp  robot_host.hpp  sim.cpp  sim.hpp  world.cpp  world.hpp
src/vm/: CMakeLists.txt  bytecode.hpp  compiler.cpp  compiler.hpp  vm.cpp  vm.hpp
tests/: CMakeLists.txt  test_blueprint.cpp  test_editor.cpp  test_enhance.cpp  test_fleet.cpp  test_interp.cpp  test_lexer.cpp  test_lists.cpp  test_main.cpp  test_parser.cpp  test_progress.cpp  test_sim.cpp  test_smoke.cpp  test_sync.cpp  test_vm.cpp
